--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   just_audio: ^0.9.41
+  firebase_core: ^3.6.0
+  carousel_slider: ^5.0.0
+  shared_preferences: ^2.3.0
+  so_simple_splash: ^0.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
